styles.css
* 
{
    margin: 0;
    padding: 0;
    font-family: "Varela Round", sans-serif;;
}

.landing 
{
    background-image: url("./images/img12.jpeg");
    background-size: 100%;
    background-position: center;
    background-repeat: no-repeat;
    height: 100vh;
    width: 100vw;
}

.intro_header
{
    letter-spacing: 0.05em;
    padding-top: 10%;
    color: white;
    font-size: 5em;
    text-align: center;
    text-shadow: 2px 2px black;
}

.intro_header_title 
{
    color: #F6B352;
    font-size: 2em;
    font-weight: 100;
    text-align: center;
}

.introduction 
{
    font-size: 1.5em;
    border-radius: 10px;
    padding: 10px;
    width: 50%;
    margin: auto;
    text-align: left;
    color: white;
    text-shadow: 1.5px 1.5px black;

    background-color: #1F2124;
    border: 3px solid #F6B352;
} 

.landing_horizontal 
{
    display: flex;
    justify-content: space-around;
    align-items: center;
    height: 50vh;
}

.portrait 
{
    height: 40vh;
    width: 40vh;
    border-radius: 30%;
    border: 3px solid #F6B352;
    margin-right: 30vh;
}

.navbar 
{
    overflow: hidden;
    background-color: rgb(27, 27, 27);
    position: fixed;
    width: 100%;
    display: flex;
    justify-content: space-around;
}
  
.navbar a 
{
    float: left;
    color: #F6B352;
    text-align: center;
    padding: 15px 20px;
    width: 20%;
    text-decoration: none;
}

.navbar a:hover 
{
    background-color: #ddd;
    color: black;
    cursor: pointer;
}

.portfolio_header 
{
    font-size: 3em;
    font-weight: 1;
    text-align: center;
    padding-top: 10vh;
    color: white;
    padding-bottom: 10vh;
    

    border: 2px solid #F6B352;
    border-radius: 5px;
    width: 40%;
    margin: auto;
    text-align: center;
    background-color: #1F2124;
}

.portfolio
{
    background-color: rgb(249, 247, 247);
    width: 100%;
    background-image: url("./images/img12.jpeg");
}

.card
{
    background-color: #1F2124;
    border-radius: 10px;
    width: 35vw;
    height: 35vh;
    margin: 5vh;
    padding: 2vh;
    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
    text-align: center;
    overflow-y: hidden;
    border: 2px solid #F6B352;
}

.card_project
{
    font-size: 2em;
    font-weight: 1;
    text-align: left;
    color: white;
    padding-bottom: 1vh;
}

.card_title
{
    font-size: 1.5em;
    font-weight: 1;
    color: #F6B352;
}

.card_description
{
    font-size: 1em;
    font-weight: 1;
    text-align: left;
    color: white;
    padding-bottom: 1vh;
}

.card_description 
{
    padding: 3vh;
    font-size: 2vh;
}

.card_list_item
{
    padding: .5vh;
}

.image_and_title 
{
    display: flex;
    justify-content: center;
    align-items: center;
}

.card_image 
{
    padding-left: 1vh;
    height: 3vh;
    width: 3vh;
}

.card_image:hover
{
    transform: scale(1.2);
    cursor: pointer;
}

.card_holder_row
{
    display: flex;
    justify-content: center;
    align-items: center;
}

.qualifications
{
    background-color: #1F2124;
    width: 100%;
    background-image: url("./images/img12.jpeg");
}

.qualifications_body
{
    display: flex;
    justify-content: center;
    align-items: center;
    height: 100vh;
    font-size: 1em;
    font-weight: 1;
    text-align: left;
    color: black;
}

.qualifications_text
{
    padding: 5vh;
    width: 40%;
    background-color: #1F2124;
    color: white;
    border-radius: 10px;
    border: 2px solid #F6B352;
}

.qualifications_side
{
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    height: 100vh;
    width: fit-content;
    margin-left: 5vh;

}

.resume_button
{
    display: block;
    background: #F6B352;
    color: white;
    padding: 15px 20px;
    margin: 20px 0;
    border-radius: 10px;
    box-shadow: rgba(0,0,0,0.9);
    text-decoration: none;
}

.resume_button:hover 
{
    background-color: #f9d29b;
}


.skills_header
{
    color:#F6B352;
    padding-bottom: 2vh;
    text-align: center;
}

.qualifications_skills
{
    padding: 5vh;
    width: fit-content;
    background-color: #1F2124;
    border-radius: 10px;
    border: 2px solid #F6B352;
    color: white;
}

.resume_image 
{
    padding-left: 1vh;
    height: 5vh;
    width: 5vh;
}

.resume_image:hover
{
    transform: scale(1.2);
    cursor: pointer;
}

.services
{
    background-color: rgb(249, 247, 247);
    width: 100%;
    background-image: url("./images/img12.jpeg");
    min-height: 100vh;
    max-height: fit-content;
}

.services_card
{
    background-color: #1F2124;    
    border-radius: 10px;
    width: 30vw;
    height: 40vh;
    display: block;
    overflow: auto;
    margin: 5vh;
    padding: 5vh;
    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
    overflow: hidden;
    border: 2px solid #F6B352;
    color: white;
}

.services_subheader
{
    color:#F6B352;
    padding-top: 1vh;
    padding-bottom: 2vh;
}

.services_body
{
    display: flex;
    justify-content: center;
    font-size: 1em;
    font-weight: 1;
    color: black;
}

